<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Speye</string>
    <string name="speye_main">Speye</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_menu">Main menu</string>
    <string name="start_surveillance">Start surveillance</string>
    <string name="setup_alert_accounts">Setup alert accounts</string>
    <string name="settings">Settings</string>
    <string name="arm">Arm</string>
    <string name="current_motion">"Motion:\n"</string>
    <string name="current_threshold">"Threshold:\n"</string>
    <string name="arm_label">Arm</string>
    <string name="disarm_label">Disarm</string>
    <string name="device_armed">Device is armed</string>
    <string name="device_disarmed">Device is disarmed</string>
    <string name="wait_for_arm_label">"Arm in 5 seconds.\nHold device still!"</string>
    <string name="call_accounts">Call accounts</string>
    <string name="sms_accounts">SMS accounts</string>
    <string name="email_accounts">E-mail accounts</string>
    <string name="dropbox_accounts">Dropbox accounts</string>
    <string name="add_account">Setup new account</string>
    <string name="edit_call_account">Edit call account</string>
    <string name="enter_name_to_be_called">Enter name</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enabled">Enabled</string>
    <string name="save">SAVE</string>
    <string name="delete">Delete account</string>
    <string name="call_account_saved">Call account saved!</string>
    <string name="call_account_updated">Call account updated!</string>
    <string name="call_account_deleted">Call account deleted!</string>
    <string name="all_fields_required">All fields must be filled!</string>
    <string name="sms_account_saved">SMS account saved!</string>
    <string name="sms_account_updated">SMS account updated!</string>
    <string name="sms_account_deleted">SMS account deleted!</string>
    <string name="edit_sms_account">Edit SMS account</string>
    <string name="enter_sms_number">Enter phone number</string>
    <string name="enter_sms_user">Enter name</string>
    <string name="email_account_saved">Email account saved!</string>
    <string name="email_account_updated">Email account updated!</string>
    <string name="email_account_deleted">Email account deleted!</string>
    <string name="edit_email_account">Edit Email account</string>
    <string name="enter_email_address">Enter Email address</string>
    <string name="enter_email_user">Enter name</string>
    <string name="link_dropbox_account">Link Dropbox account</string>
    <string name="enter_name">Enter name</string>
    <string name="edit_dropbox_account">Edit Dropbox account</string>
    <string name="already_linked">Account linked</string>
    <string name="relink_dropbox_account">Relink Dropbox account</string>
    <string name="dropbox_account_updated">Dropbox account updated!</string>
    <string name="dropbox_account_deleted">Dropbox account deleted!</string>
    <string name="dropbox_account_saved">Dropbox account saved!</string>
    <string name="linking_required">Linking required!</string>
    <string name="sms_alarm_message">SMS alarm! Motion detected at %1$s! Alarm switched off.</string>
    <string name="email_alarm_message">Motion detected at %1$s! Alarm switched off. A picture of the motion was attached to the email.</string>
    <string name="email_alarm_header">Email alarm!</string>
    <string name="arm_cancelled">Arm cancelled!</string>
    <string name="cancel_label">Cancel</string>
    <string name="armed_status_remote_notify_message">The device status was changed to armed by remote request. (by %1$s)</string>
    <string name="disarmed_status_remote_notify_message">The device status was changed to disarmed by remote request. (by %1$s)</string>
    <string name="remote_notify_header">Device arm status was changed remotely!</string>
    <string name="local_alarm">[NYI] Local alarm</string>
    <string name="enable_local_alarm">[NYI] Enable local alarm</string>
    <string name="language_preferences">[NYI] Language preferences</string>
    <string name="choose_local_alarm">[NYI] Choose alarm tone</string>
    <string name="select_language">[NYI] Select language</string>
    <string name="status_notifications">[NYI] Status notifications</string>
    <string name="phone_charging_notification">[NYI] Charge notifications</string>
    <string name="low_battery_notification">[NYI] Low battery notifications</string>

</resources>